<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Simple Tip Calculator</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="string_logo">logo</string>
    <string name="billAmountString">Bill Amount</string>
    <string name="billAmountHintString"></string>
    <string name="tipString">Tip Amount(%)</string>
    <string name="tipHintString"></string>
    <string name="calculateTipString">Calculate Tip</string>
    <string name="payViewString">Number of people</string>
    <string name="secondbillAmountString">Bill Amount:</string>
    <string name="secondTipAmountString">Tip Amount:</string>
    <string name="secondTotalAmountString">Total Amount:</string>
    <string name="wantATipString">Want a tip suggestion?</string>
    <string name="ratingsString">Rate your experience for a tip suggestion.</string>
    <string name="rateRateString">Rate</string>
    <string name="rateCancelString">Cancel</string>
    <string name="splitBillPrompt"></string>
    <string name="tipPerPersonString">Tip per person:</string>
    <string name="eachPersonPayString">Each person pays:</string>
    <string name="totalSectionString">Total Section</string>
    <string name="defaultTipPercentage">10</string>
    <string name="defaultCurrency">1</string>
    <string name="defaultTipPercentageDialogString">Set your default tip percentage</string>
    <string name="defaultCurrencyDialogString">Choose your default currency</string>
    <string-array name="numSplitBill">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>

</resources>
