<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:gravity="center_horizontal"
    android:baselineAligned="true"
    android:weightSum="1">


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:layout_width="250dp"
        android:layout_height="140dp"
        android:padding="10dp"
        android:elevation="4dp"
        android:gravity="center_horizontal"
        >
        <android.support.v7.widget.CardView
            android:layout_width="250dp"
            android:layout_height="120dp"
            card_view:cardBackgroundColor="#BBDEFB"
            android:layout_gravity="center_horizontal">
            <ImageView
                android:layout_width="250dp"
                android:layout_height="120dp"
                android:padding="10dp"
                android:id="@+id/logo"
                android:src="@drawable/logo5"
            />
        </android.support.v7.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="70sp"
        android:layout_marginTop="30dp"
        android:id="@+id/billLinearLayout"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/billAmountTextView"
            android:text="@string/billAmountString"
            android:textSize="20sp"
            android:layout_marginLeft="-2dp"
            android:gravity="center_vertical|center_horizontal" />

        <EditText
            android:layout_width="150sp"
            android:layout_height="match_parent"
            android:layout_marginLeft="23dp"
            android:id="@+id/billAmountEditText"
            android:hint="@string/billAmountHintString"
            android:textAlignment="gravity"
            android:inputType="numberDecimal"
            android:gravity="center_vertical|center_horizontal"
            android:layout_gravity="center" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="70sp"
        android:id="@+id/tipLinearLayout"
        android:gravity="center_vertical|center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="23dp"
            android:text="@string/tipString"
            android:id="@+id/tipTextView"
            android:textSize="20sp"
            android:gravity="center_vertical"
            android:layout_gravity="center_horizontal" />

        <EditText
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="9dp"
            android:id="@+id/tipEditText"
            android:hint="@string/tipHintString"
            android:inputType="numberDecimal"
            android:gravity="center_vertical|center_horizontal"
            android:maxLength="5" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_height="wrap_content"
            android:elevation="5dp"
            android:id="@+id/tipButon"
            android:background="@drawable/ic_help"
            android:onClick="onClickHelpTip" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="70sp"
        android:id="@+id/payLinearLayout"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="200dp"
            android:layout_marginLeft="-10dp"
            android:layout_height="match_parent"
            android:text="@string/payViewString"
            android:id="@+id/payTextView"
            android:textSize="20sp"
            android:gravity="center_vertical" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center_horizontal" />

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculateTipString"
        android:id="@+id/calculateButton"
        android:onClick="onCalculateTip"
        android:layout_marginTop="25dp"
        android:layout_gravity="center_horizontal" />

</LinearLayout>
